--- a/src/main/Startsida.fxml
+++ b/src/main/Startsida.fxml
@@ -1,52 +1,147 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.gluonhq.charm.glisten.control.AutoCompleteTextField?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <SplitPane dividerPositions="0.14206128133704735" orientation="VERTICAL" prefHeight="720.0" prefWidth="960.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-               <children>
-                  <SplitPane dividerPositions="0.20250521920668058" layoutX="-1.0" layoutY="-2.0" prefHeight="619.0" prefWidth="960.0">
-                    <items>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <Pane prefHeight="88.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="26.0" layoutY="14.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="97.0" text="Button" />
+            <AutoCompleteTextField layoutX="232.0" layoutY="21.0" prefHeight="21.0" prefWidth="473.0" />
+            <Button layoutX="801.0" layoutY="12.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="123.0" text="Button" />
+         </children>
+      </Pane>
+   </top>
+   <left>
+      <Pane prefHeight="609.0" prefWidth="164.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="27.0" layoutY="193.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+            <Button layoutX="27.0" layoutY="250.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+            <Button layoutX="27.0" layoutY="314.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+            <Button layoutX="27.0" layoutY="369.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+            <Button layoutX="27.0" layoutY="424.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+            <Button layoutX="27.0" layoutY="476.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+            <Button layoutX="27.0" layoutY="529.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+            <Button layoutX="27.0" layoutY="51.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+            <Button layoutX="27.0" layoutY="103.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+            <Label layoutX="55.0" layoutY="21.0" text="Kategorier" />
+         </children>
+      </Pane>
+   </left>
+   <center>
+      <TabPane prefHeight="632.0" prefWidth="497.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+        <tabs>
+          <Tab fx:id="handlaTab" text="Handla">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="603.0" prefWidth="573.0">
+                     <children>
+                        <StackPane prefHeight="604.0" prefWidth="570.0">
                            <children>
-                              <SplitPane dividerPositions="0.7470355731225297" prefHeight="617.0" prefWidth="761.0">
+                              <SplitPane dividerPositions="0.09136212624584718" orientation="VERTICAL" prefHeight="604.0" prefWidth="500.0">
                                 <items>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                        <children>
-                                          <TabPane prefHeight="613.0" prefWidth="564.0" tabClosingPolicy="UNAVAILABLE">
-                                            <tabs>
-                                              <Tab text="Untitled Tab 1">
-                                                <content>
-                                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                                </content>
-                                              </Tab>
-                                              <Tab text="Untitled Tab 2">
-                                                <content>
-                                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                                </content>
-                                              </Tab>
-                                            </tabs>
-                                          </TabPane>
+                                          <GridPane layoutX="149.0" layoutY="-19.0" prefHeight="52.0" prefWidth="569.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="0.0">
+                                            <columnConstraints>
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="302.0" minWidth="10.0" prefWidth="189.0" />
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="461.0" minWidth="0.0" prefWidth="215.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="461.0" minWidth="10.0" prefWidth="247.0" />
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                            </rowConstraints>
+                                             <children>
+                                                <Button mnemonicParsing="false" prefHeight="103.0" prefWidth="204.0" text="Button" />
+                                                <Button mnemonicParsing="false" prefHeight="180.0" prefWidth="340.0" text="Button" GridPane.columnIndex="1" />
+                                             </children>
+                                          </GridPane>
                                        </children>
                                     </AnchorPane>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="604.0" prefWidth="182.0" />
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="544.0" prefWidth="516.0">
+                                       <children>
+                                          <ScrollPane prefHeight="543.0" prefWidth="569.0">
+                                            <content>
+                                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="516.0" prefWidth="570.0">
+                                                   <children>
+                                                      <GridPane layoutX="99.0" layoutY="129.0" prefHeight="516.0" prefWidth="566.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="32.0" AnchorPane.topAnchor="0.0">
+                                                        <columnConstraints>
+                                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                        </columnConstraints>
+                                                        <rowConstraints>
+                                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                        </rowConstraints>
+                                                      </GridPane>
+                                                   </children>
+                                                </AnchorPane>
+                                            </content>
+                                          </ScrollPane>
+                                       </children>
+                                    </AnchorPane>
                                 </items>
                               </SplitPane>
                            </children>
-                        </AnchorPane>
-                    </items>
-                  </SplitPane>
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
-   </children>
-</AnchorPane>
+                        </StackPane>
+                        <StackPane prefHeight="604.0" prefWidth="570.0">
+                           <children>
+                              <Pane prefHeight="479.0" prefWidth="458.0" style="-fx-background-color: red;">
+                                 <children>
+                                    <Button layoutX="25.0" layoutY="42.0" mnemonicParsing="false" prefHeight="260.0" prefWidth="237.0" text="Button" />
+                                    <Button layoutX="285.0" layoutY="42.0" mnemonicParsing="false" prefHeight="122.0" prefWidth="229.0" text="Button" />
+                                    <Button layoutX="285.0" layoutY="180.0" mnemonicParsing="false" prefHeight="122.0" prefWidth="229.0" text="Button" />
+                                    <Label layoutX="248.0" layoutY="356.0" prefHeight="17.0" prefWidth="114.0" text="Favorite" textAlignment="CENTER" />
+                                    <ListView layoutX="50.0" layoutY="400.0" prefHeight="158.0" prefWidth="464.0" />
+                                 </children>
+                              </Pane>
+                           </children>
+                        </StackPane>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab fx:id="ordrarTab" text="Ordrar">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </Tab>
+            <Tab fx:id="inköpslistorTab" text="Inköpslistor">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+            <Tab fx:id="minSidaTab" text="Min Sida">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+        </tabs>
+      </TabPane>
+   </center>
+   <right>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <ListView layoutY="70.0" prefHeight="456.0" prefWidth="225.0" />
+            <Button layoutX="21.0" layoutY="556.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="159.0" text="Button" />
+            <Label fx:id="summaLbl" layoutX="141.0" layoutY="535.0" text="0 kr" />
+            <Label layoutX="73.0" layoutY="26.0" text="Kundvagn" />
+         </children>
+      </AnchorPane>
+   </right>
+</BorderPane>
