--- a/src/main/HomePage.fxml
+++ b/src/main/HomePage.fxml
@@ -8,14 +8,15 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
@@ -78,17 +79,7 @@
                                             <content>
                                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="516.0" prefWidth="570.0">
                                                    <children>
-                                                      <GridPane layoutX="99.0" layoutY="129.0" prefHeight="516.0" prefWidth="566.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="32.0" AnchorPane.topAnchor="0.0">
-                                                        <columnConstraints>
-                                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                                        </columnConstraints>
-                                                        <rowConstraints>
-                                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                        </rowConstraints>
-                                                      </GridPane>
+                                                      <FlowPane layoutX="-1.0" layoutY="-2.0" prefHeight="531.0" prefWidth="568.0" />
                                                    </children>
                                                 </AnchorPane>
                                             </content>
@@ -103,11 +94,9 @@
                            <children>
                               <Pane prefHeight="479.0" prefWidth="458.0" style="-fx-background-color: red;">
                                  <children>
-                                    <Button layoutX="25.0" layoutY="42.0" mnemonicParsing="false" prefHeight="260.0" prefWidth="237.0" text="Button" />
-                                    <Button layoutX="285.0" layoutY="42.0" mnemonicParsing="false" prefHeight="122.0" prefWidth="229.0" text="Button" />
-                                    <Button layoutX="285.0" layoutY="180.0" mnemonicParsing="false" prefHeight="122.0" prefWidth="229.0" text="Button" />
-                                    <Label layoutX="248.0" layoutY="356.0" prefHeight="17.0" prefWidth="114.0" text="Favorite" textAlignment="CENTER" />
-                                    <ListView layoutX="50.0" layoutY="400.0" prefHeight="158.0" prefWidth="464.0" />
+                                    <ImageView fitHeight="220.0" fitWidth="220.0" layoutX="36.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true" />
+                                    <ImageView fitHeight="104.0" fitWidth="220.0" layoutX="294.0" layoutY="171.0" pickOnBounds="true" preserveRatio="true" />
+                                    <ImageView fitHeight="117.0" fitWidth="220.0" layoutX="294.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true" />
                                  </children>
                               </Pane>
                            </children>
