--- a/src/main/ShoppingCartItem.fxml
+++ b/src/main/ShoppingCartItem.fxml
@@ -10,9 +10,9 @@
    <children>
       <Label fx:id="itemLabel" layoutX="76.0" layoutY="12.0" prefHeight="30.0" prefWidth="52.0" text="Paprika" />
       <ImageView fx:id="itemImage" fitHeight="70.0" fitWidth="71.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="minusbUTTON" layoutX="77.0" layoutY="55.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="Button" />
-      <Button fx:id="PLUSbUTTON" layoutX="129.0" layoutY="55.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="Button" />
-      <Button layoutX="186.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="Button" />
+      <Button fx:id="minusButton" layoutX="77.0" layoutY="55.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="Button" />
+      <Button fx:id="plusButton" layoutX="129.0" layoutY="55.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="Button" />
+      <Button fx:id="removeLabel" layoutX="186.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="Button" />
       <Label fx:id="priceLabel" layoutX="176.0" layoutY="55.0" prefHeight="30.0" prefWidth="45.0" text="kr" textAlignment="RIGHT" />
       <Label fx:id="amountLabel" layoutX="112.0" layoutY="55.0" prefHeight="25.0" prefWidth="25.0" text="0" />
    </children>
