--- a/src/main/HomePage.fxml
+++ b/src/main/HomePage.fxml
@@ -18,9 +18,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="960.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <Pane prefHeight="88.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
+      <Pane prefHeight="101.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
          <children>
             <Button layoutX="26.0" layoutY="14.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="97.0" text="Button" />
             <Button layoutX="801.0" layoutY="12.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="123.0" text="Button" />
@@ -29,29 +29,33 @@
       </Pane>
    </top>
    <left>
-      <Pane prefHeight="609.0" prefWidth="164.0" BorderPane.alignment="CENTER">
+      <Pane prefHeight="618.0" prefWidth="164.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="27.0" layoutY="193.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-            <Button layoutX="27.0" layoutY="250.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-            <Button layoutX="27.0" layoutY="314.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-            <Button layoutX="27.0" layoutY="369.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-            <Button layoutX="27.0" layoutY="424.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-            <Button layoutX="27.0" layoutY="476.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-            <Button layoutX="27.0" layoutY="529.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-            <Button layoutX="27.0" layoutY="51.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-            <Button layoutX="27.0" layoutY="103.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-            <Label layoutX="55.0" layoutY="21.0" text="Kategorier" />
+            <Pane layoutX="5.0" layoutY="30.0" prefHeight="578.0" prefWidth="155.0" styleClass="border">
+               <children>
+                  <Button layoutX="23.0" layoutY="82.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                  <Button layoutX="22.0" layoutY="126.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                  <Button layoutX="22.0" layoutY="219.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                  <Button layoutX="22.0" layoutY="263.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                  <Button layoutX="22.0" layoutY="307.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                  <Button layoutX="22.0" layoutY="351.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                  <Button layoutX="22.0" layoutY="395.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                  <Button layoutX="22.0" layoutY="439.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                  <Button layoutX="22.0" layoutY="483.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                  <Label layoutX="50.0" layoutY="20.0" text="Kategorier" />
+               </children>
+            </Pane>
          </children>
       </Pane>
    </left>
    <center>
-      <TabPane prefHeight="632.0" prefWidth="497.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+      <TabPane prefHeight="602.0" prefWidth="622.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
         <tabs>
-          <Tab fx:id="handlaTab" text="Handla">
+          <Tab fx:id="handlaTab" styleClass="tabhandle" text="Handla">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="603.0" prefWidth="573.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="560.0" prefWidth="546.0">
                      <children>
-                        <StackPane prefHeight="604.0" prefWidth="570.0">
+                        <StackPane prefHeight="560.0" prefWidth="566.0">
                            <children>
                               <SplitPane dividerPositions="0.09136212624584718" orientation="VERTICAL" prefHeight="604.0" prefWidth="500.0">
                                 <items>
@@ -90,9 +94,9 @@
                               </SplitPane>
                            </children>
                         </StackPane>
-                        <StackPane prefHeight="604.0" prefWidth="570.0">
+                        <StackPane layoutY="-3.0" prefHeight="563.0" prefWidth="565.0">
                            <children>
-                              <Pane prefHeight="479.0" prefWidth="458.0" style="-fx-background-color: red;">
+                              <Pane prefHeight="532.0" prefWidth="565.0" style="-fx-background-color: red;">
                                  <children>
                                     <ImageView fitHeight="220.0" fitWidth="220.0" layoutX="36.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true" />
                                     <ImageView fitHeight="104.0" fitWidth="220.0" layoutX="294.0" layoutY="171.0" pickOnBounds="true" preserveRatio="true" />
@@ -123,14 +127,21 @@
         </tabs>
       </TabPane>
    </center>
+   <bottom>
+      <Pane prefHeight="12.0" prefWidth="960.0" BorderPane.alignment="CENTER" />
+   </bottom>
    <right>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <Pane prefHeight="570.0" prefWidth="225.0" BorderPane.alignment="CENTER">
          <children>
-            <ListView layoutY="70.0" prefHeight="456.0" prefWidth="225.0" />
-            <Button layoutX="21.0" layoutY="556.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="159.0" text="Button" />
-            <Label fx:id="summaLbl" layoutX="141.0" layoutY="535.0" text="0 kr" />
-            <Label layoutX="73.0" layoutY="26.0" text="Kundvagn" />
+            <AnchorPane layoutX="-1.0" layoutY="30.0" prefHeight="577.0" prefWidth="223.0" styleClass="border">
+               <children>
+                  <ListView layoutX="3.0" layoutY="67.0" prefHeight="392.0" prefWidth="216.0" />
+                  <Button layoutX="32.0" layoutY="486.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="159.0" text="Button" />
+                  <Label layoutX="73.0" layoutY="26.0" text="Kundvagn" />
+                  <Label fx:id="summaLbl" layoutX="181.0" layoutY="459.0" text="0 kr" />
+               </children>
+            </AnchorPane>
          </children>
-      </AnchorPane>
+      </Pane>
    </right>
 </BorderPane>
